# dreg-client

./: .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  README.rst  docker-registry-show.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  tasks.py
.github/workflows/: ci.yml  release.yml
docker_registry_client/: AuthorizationService.py  DockerRegistryClient.py  Repository.py  _BaseClient.py  __init__.py
dreg_client/: AuthorizationService.py  DockerRegistryClient.py  _BaseClient.py  __init__.py  _synth.py  _types.py  auth_service.py  client.py  image.py  manifest.py  registry.py  repository.py  schemas.py
tests/: conftest.py  test_auth_service.py  test_base_client.py  test_client.py  test_dockerregistryclient.py  test_image.py  test_registry.py  test_repository.py  util.py
tests/drc_test_utils/: mock_registry.py
tests/fixtures/: blob-container-image-v1.json  manifest-v1.json
tests/integration/: conftest.py  test_base_client.py  test_client.py  test_registry.py
tests/manifest/: test_parse_image_config.py  test_parse_manifest.py  test_platform.py
