[build-system]
requires = ["setuptools >= 30.3.0", "wheel"]


[tool.black]
target-version = ["py39", "py310"]
line-length = 100


[tool.coverage.run]
branch = true
include = [
    "dreg_client/*",
]
omit = [
    "dreg_client/_types.py",
    "tests/*",
    "setup.py",
    "tasks.py",
]


[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "noqa",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]


[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_tests = "tests"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER"
lines_after_imports = 2
lines_between_sections = 1


[tool.mypy]
check_untyped_defs = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "docker",
    "docker.*",
    "requests_toolbelt",
    "requests_toolbelt.*",
]
ignore_missing_imports = true
